--- a/notebooks/4_tuning.ipynb
+++ b/notebooks/4_tuning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fefd6340",
+   "execution_count": 43,
+   "id": "1abae42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "60d531cc",
+   "execution_count": 44,
+   "id": "c1ecc988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ac271ea2",
+   "execution_count": 45,
+   "id": "0b9a64df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "2d9908d1",
+   "execution_count": 46,
+   "id": "6c727320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "e6a19f01",
+   "execution_count": 47,
+   "id": "c9cf7250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,15 @@
     "        \"max_depth\": IntegerParameter(1, 10),\n",
     "        \"eta\": ContinuousParameter(0, 1)\n",
     "    },\n",
-    "    objective_type=\"Minimize\"\n",
+    "    objective_type=\"Minimize\",\n",
+    "    max_jobs=5\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "5d5d8069",
+   "execution_count": 48,
+   "id": "b82ec0f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "3704d434",
+   "execution_count": null,
+   "id": "d0cd91b8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "....................................................!\n"
+      "......."
      ]
     }
    ],
@@ -117,7 +118,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71baf6b",
+   "id": "18797dfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner.best_estimator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c64c12",
    "metadata": {},
    "outputs": [],
    "source": []
