--- a/notebooks/4_tuning.ipynb
+++ b/notebooks/4_tuning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1abae42e",
+   "id": "8b82badd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c1ecc988",
+   "id": "09aceaf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0b9a64df",
+   "id": "62708c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6c727320",
+   "id": "feeeaef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c9cf7250",
+   "id": "f04037ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b82ec0f6",
+   "id": "d5b61999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0cd91b8",
+   "execution_count": 49,
+   "id": "8d3d3f39",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "......."
+      "..............................................................................................................................................................................................................................!\n"
      ]
     }
    ],
@@ -117,10 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18797dfd",
+   "execution_count": 50,
+   "id": "97e205d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2021-12-03 00:13:05 Starting - Preparing the instances for training\n",
+      "2021-12-03 00:13:05 Downloading - Downloading input data\n",
+      "2021-12-03 00:13:05 Training - Training image download completed. Training in progress.\n",
+      "2021-12-03 00:13:05 Uploading - Uploading generated training model\n",
+      "2021-12-03 00:13:05 Completed - Training job completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<sagemaker.estimator.Estimator at 0x7fceec2b6278>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tuner.best_estimator()"
    ]
@@ -128,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0c64c12",
+   "id": "9a1c288f",
    "metadata": {},
    "outputs": [],
    "source": []
